# Powered-Hospital-Delivery-Robot-with-AI-BETA

./: README.md
DatabaseDesign/: RobotManager.sql
Robot_Medicial_BE/: API_Powered Hospital Delivery Robot.sln  Dockerfile
Robot_Medicial_BE/API_Powered Hospital Delivery Robot/: API_Powered Hospital Delivery Robot.csproj  API_Powered Hospital Delivery Robot.http  Program.cs  WeatherForecast.cs  appsettings.json
Robot_Medicial_BE/API_Powered Hospital Delivery Robot/Controllers/: AuthController.cs  DestinationsController.cs  RobotsController.cs  TasksController.cs  UsersController.cs  WeatherForecastController.cs
Robot_Medicial_BE/API_Powered Hospital Delivery Robot/Helpers/: EmailHelper.cs  JwtHelper.cs
Robot_Medicial_BE/API_Powered Hospital Delivery Robot/Mapping/: DestinationProfile.cs  RobotProfile.cs  TaskProfile.cs  UserMappingProfile.cs  UserProfile.cs
Robot_Medicial_FE/: .gitignore  Dockerfile  index.html  package.json  vite.config.js
Robot_Medicial_FE/src/: App.jsx  main.jsx
Robot_Medicial_FE/src/components/: Footer.jsx  Header.jsx
Robot_Medicial_IOT/robot_ws/: readme.md
Robot_Medicial_IOT/robot_ws/src/robot_driver/: CMakeLists.txt  package.xml
Robot_Medicial_IOT/robot_ws/src/robot_driver/config/: hardware.yaml
Robot_Medicial_IOT/robot_ws/src/robot_driver/launch/: control_launch.py  driver_launch.py
Robot_Medicial_IOT/robot_ws/src/robot_driver/scripts/: cmd_vel.py  filter_lidar.py  filter_lidar_scan.py  kalman_filter.py  lidar.py  load_and_setinital_pose.py  pointcloud.py  read_cam.py  read_serial.py  stm32_controller.py  stm32_node.py  teleop.py  visualize.py  web_control.py
Robot_Medicial_IOT/robot_ws/src/robot_driver/urdf/: robot.xacro
(+86 files in other folders)
